[package]
name = "csrtool"
version = "0.1.0"
authors = ["tathanhdinh <tathanhdinh@gmail.com>"]

[dependencies]
capstone = { path = "/home/tathanhdinh/Public/Github/capstone-rs", version = "*" }
unicorn = { git = "https://github.com/ekse/unicorn-rs.git", version = "*" }
clap = { git = "https://github.com/kbknapp/clap-rs.git", version = "*" }

